                                                         -*- coding: utf-8 -*-
Changes with Apache 2.0.60

  *) htdbm: Fix crash processing -d option in 64-bit mode on HP-UX.
     [Jeff Trawick]

  *) proxy_http.c: Overlay existing cookies with proxied ones, ala
     httpd-2.2. [Jim Jagielski]

  *) mod_proxy: ProxyTimeout (and others) ignored due to not merging
     the *_set params. PR 11540. [Jim Jagielski]

  *) mod_isapi: Correctly present SERVER_PORT_SECURE.
     PR 40573.  [Matt Eaton <asf divinehawk.com>]

  *) mod_isapi: Avoid double trailing slashes in HSE_REQ_MAP_URL_TO_PATH
     support.  Also corrects the slashes for Windows.  PR 15993. [William Rowe]

  *) mod_isapi: Handle "HTTP/1.1 200 OK" style status lines correctly, the
     token parser worked while the resulting length was misinterpreted.
     PR 29098.  [Brock Bland <bbland serena.com>]

  *) mod_isapi: Return 0 (failure) for more of the various ap_pass_brigade
     attempts to stream the response at the client.  Log these as well.
     PR 30022, 40470.  [William Rowe, Matt Eaton <asf divinehawk.com>]

  *) mod_isapi: Ensure we walk through all the methods the developer may have
     employed to report their HTTP status result code.
     PR 16637 30033 28089.  [Matt Lewandowsky <matt iamcode.net>, William Rowe]

Changes with Apache 2.0.59

  *) SECURITY: CVE-2006-3747 (cve.mitre.org)
     mod_rewrite: Fix an off-by-one security problem in the ldap scheme
     handling.  For some RewriteRules this could lead to a pointer being
     written out of bounds.  Reported by Mark Dowd of McAfee.
     [Mark Cox]

  *) Win32: Minor fixes to build more cleanly under Visual Studio 2005
     from the command line build.  [William Rowe]

Changes with Apache 2.0.58

  *) Legal: Restored original years in copyright notices.
     [Colm MacCarthaigh]

Changes with Apache 2.0.57

  *) mod_cgid: run the get_suexec_identity hook within the request-handler
     instead of within cgid. PR 36410. [Colm MacCarthaigh] 
