@@ -120,12 +120,6 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
       Patch; http://issues.apache.org/bugzilla/attachment.cgi?id=16495
       +1: wrowe, rpluem, sctemme
 
-    * mod_cgi and mod_cgid: Don't use apr_status_t error return
-      from input filters as HTTP return value from the handler.
-      PR#31579.
-      Trunk: http://svn.apache.org/viewvc?view=rev&revision=442758
-      +1: niq, wrowe, rpluem
-
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ please place SVN revisions from trunk here, so it is easy to
     identify exactly what the proposed changes are!  Add all new
