@@ -1,6 +1,10 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.0.60
 
+  *) mod_cgi, mod_cgid: Don't return apr_status_t error value
+     from input filter chain. PR 31759 (mutated). [Jo Rhett,
+     Nick Kew]
+
   *) htdbm: Fix crash processing -d option in 64-bit mode on HP-UX.
      [Jeff Trawick]
 
